update: cart process and setup swagger to project
